[package]
name = "rt-rs"
version = "0.1.0"
authors = ["zehreken <zehreken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.8"
rand = "0.7.3"
minifb = "0.18.0"
puffin = "0.3.0"

[dependencies.sdl2]
version = "0.32.2"
default-features = false
